fixed winner name wrapping with longer names

--- a/styles.css
+++ b/styles.css
@@ -55,6 +55,7 @@ body {
     padding-left:4rem;
     font-weight: 450;
     flex-wrap: nowrap;
+    white-space: nowrap;
 }
 
 .cell {
